Fix implemented: block overflows in the desktop menu are now resolved

--- a/style.css
+++ b/style.css
@@ -28,15 +28,9 @@ body {
 }
 
 .header {
-    /* background-color: #a6a9a8; */
     width: 100%;
-    height: 10vh;
     display: flex;
-    /* align-items: center; */
     border: 3px solid black;
-    /* gap: 30%; */
-    /* overflow: hidden; */
-    /* flex-wrap: wrap ; */
 }
 
 .logo_header {
@@ -54,23 +48,29 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-wrap: wrap;
-    
+    flex-wrap: wrap; 
+    gap: 1rem;
 }
 
-.desktop_menu a {
-    background-color: #fff;
-    padding: 0.3rem;
-    font-size: 200;
-    z-index:1 ;
-    color : red;
-    font-size:1.5rem;
-    display:block;
+.desktop_menu li {
+    list-style: none;
+}
+.desktop_menu li a {
+    background-color: #d64141;
+    color: white;
+    text-align: center;
+    padding: 0.5rem 2rem;
+    font-size: larger;
+    font-weight:700;
+    
+}
+.connexion {
+    border-radius: 25px; 
 }
 
 .hdr_a img {
     width: 50%;
-    height: 100%;
+    max-height: 2rem;
 }
 
 .nav {
